<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:defaultFocusHighlightEnabled="true"
    app:guidelineUseRtl="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvConsum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/tv_consum"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConsum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_consum"
        app:layout_constraintStart_toStartOf="@+id/tvConsum1"
        app:layout_constraintTop_toBottomOf="@+id/etConsum1" />

    <TextView
        android:id="@+id/tvCost1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_cost"
        app:layout_constraintStart_toStartOf="@+id/tvConsum2"
        app:layout_constraintTop_toBottomOf="@+id/spFuelTypes2" />

    <TextView
        android:id="@+id/tvCost2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_cost"
        app:layout_constraintStart_toStartOf="@+id/tvCost1"
        app:layout_constraintTop_toBottomOf="@+id/etCost1" />

    <EditText
        android:id="@+id/etConsum1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/text_ex_gas"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/spFuelTypes1"
        app:layout_constraintStart_toEndOf="@+id/tvConsum1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etConsum2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/text_ex_gas_value"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/spFuelTypes2"
        app:layout_constraintStart_toEndOf="@+id/tvConsum2"
        app:layout_constraintTop_toBottomOf="@+id/etConsum1" />

    <EditText
        android:id="@+id/etCost1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/text_ex_gas_value"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/tvCost1"
        app:layout_constraintTop_toBottomOf="@+id/spFuelTypes2" />

    <EditText
        android:id="@+id/etCost2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/text_ex_ethanol_value"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/etCost1"
        app:layout_constraintStart_toEndOf="@+id/tvCost2"
        app:layout_constraintTop_toBottomOf="@+id/etCost1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="35dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/etConsum1"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btClean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/bt_clean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCost2" />

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/bt_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCost2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64705884" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="265dp" />

    <Spinner
        android:id="@+id/spFuelTypes1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:entries="@array/Combustíveis"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spFuelTypes2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:entries="@array/Combustíveis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spFuelTypes1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/tvCost1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConsum2"
        app:srcCompat="@mipmap/coin_icon_foreground" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/etCost1"
        app:srcCompat="@mipmap/coin_icon_foreground" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="yes"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btClean"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>